--- a/AssetManagerAPI/Web.config
+++ b/AssetManagerAPI/Web.config
@@ -22,7 +22,7 @@
     </httpModules>
   </system.web>
   <connectionStrings>
-    <add name="dbEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=aquilaco.database.windows.net;initial catalog=AssetManager;persist security info=True;user id=sa_user;password=^H7p8_$NNVRv@fVc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="dbEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=aquilaco.database.windows.net;initial catalog=AssetManager;persist security info=True;user id=sa_user;password={{password}};MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
